Finishing touches - used dynamic styling to display Credit component depending on errors state and changed height to min-height on root div inside of index.css as top of page was mysteriously being cut off - fixed - tried to host using render + netlify but ran into some issues - will try again tom

--- a/src/components/Credits.css
+++ b/src/components/Credits.css
@@ -3,6 +3,10 @@
     padding-top: 0.625rem;
 }
 
+.credits.close {
+    display: none;
+}
+
 .credits a {
     text-decoration: none;
 }
