--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     font-family: 'Josefin Sans';
     font-weight: 300;
 }
